Fix table making the blog post body overflow the screen width due to tables

--- a/src/components/BlogPost/styles.module.less
+++ b/src/components/BlogPost/styles.module.less
@@ -256,6 +256,8 @@
   flex-direction: column;
   gap: 32px;
   max-width: 1280px;
+  min-width: 560px;
+  overflow: hidden;
 
   @media (max-width: 1024px) {
     width: 100%;
